--- a/Personal Portfolio/index.css
+++ b/Personal Portfolio/index.css
@@ -6,3 +6,223 @@
 *, *::before, *::after {
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+}
+
+#navbar {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    height: 8vh;
+    background-image: linear-gradient(#af2626, #c14a4a);
+    padding-left: 10px;
+    padding-right: 10px;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+}
+
+#navbar div ul {
+    display: flex;
+}
+
+#navbar div ul li {
+    list-style: none;
+    height: 8vh;
+    line-height: 8vh;
+}
+
+#navbar div ul li a {
+    text-decoration: none;
+    color: white;
+    padding: 20px;
+    font-size: 1.2em;
+}
+
+#welcome-section {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    background-image: radial-gradient(#282828, #181717);
+    color: white;
+}
+
+#welcome-section p {
+    color: #af2626;
+    font-style: italic;
+    font-size: 0.9em;
+
+}
+
+#navbar div ul li:hover {
+    background-color: rgb(66, 91, 160);
+}
+
+#projects {
+    padding-top: 5rem;
+    background-color: #45567D;
+}
+
+.projects-title {
+    font-size: 2em;
+    margin-bottom: 2rem;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1280px;
+    grid-gap: 2.5rem;
+}
+
+.projects-title {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 540px;
+    text-align: center;
+    color: white;
+    border-bottom: 2px solid white;
+    padding-bottom: 10px;
+}
+
+.code {
+    color: #3a3838;
+    transition: color 0.3s ease-out
+}
+
+.grid-box {
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 2px;
+    background-color: #3a3838;
+}
+
+.grid-box a {
+    text-decoration: none;
+}
+
+.grid-box a img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.grid-box a p {
+    padding: 18px;
+    text-align: center;   
+    color: white;
+}
+
+.grid-box a:hover .code {
+    color: #ff7f50;
+}
+
+#projects .show-all a {
+    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+    width: 200p;
+    margin-bottom: 100px;
+    background-color: #3a3838;
+    border-radius: 3px;
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    transition: background-color 0.4s ease-in-out;
+}
+
+.show-all {
+    display: flex;
+    justify-content: center;
+}
+
+#projects .show-all a:hover {
+    background-color: #c14a4a;
+}
+
+#profile-link {
+    padding-top: 200px;
+    background-image: linear-gradient(#232020, #2a2827);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 2em;
+    height: 84vh;
+    text-align: center;
+}
+
+#profile-link p {
+    font-size: 0.5em;
+    font-style: italic;
+    padding: 20px;
+    margin-bottom: 10px;
+}
+
+.all-link {
+    list-style: none;
+    display: flex;
+}
+
+.all-link li {
+    margin-right: 30px;
+}
+
+.all-link li a {
+    text-decoration: none;
+    color: white;
+    font-size: 0.7em;
+    position: relative;
+}
+
+.all-link li a:hover {
+    animation-name: move-down;
+    animation-duration: 0.4s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+
+@keyframes move-down {
+    0% {
+        top: 0px;
+    }
+    
+    100% {
+        top: 7px;
+    }
+}
+
+footer {
+    height: 10vh;
+    background-image: linear-gradient(#232020, #2a2827);
+    border-top: 2px solid red;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 20vw;
+    color: white;
+}
+
+footer p a {
+    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+}
+
+@media (max-width: 724px) {
+    .all-link {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
